"Ejercicio 0 y 1 de las practicas"

--- a/docs/2.TareasPracticas.md
+++ b/docs/2.TareasPracticas.md
@@ -28,6 +28,9 @@ Modificar el proyecto inicial de **Docker + Node + Postgres + Nginx + Frontend**
 
   ```
   http://localhost/greet?name=TuNombre
+  
+  Aclaracion, Por algun motivo solo nos funciona la ruta ruta localhost/api/greet,etc
+  
   ```
 
 ---
