--- a/docs/2.TareasPracticas.md
+++ b/docs/2.TareasPracticas.md
@@ -29,7 +29,7 @@ Modificar el proyecto inicial de **Docker + Node + Postgres + Nginx + Frontend**
   ```
   http://localhost/greet?name=TuNombre
   
-  Aclaracion, Por algun motivo solo nos funciona la ruta ruta localhost/api/greet,etc
+  Aclaracion, Por algun motivo solo nos funciona la ruta localhost/api/greet,etc
   
   ```
 
